# CxxWrap_example

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.sh
.github/workflows/: ci.yml
Greet.jl/src/: Greet.jl
Greet.jl/test/: runtests.jl
app/: CMakeLists.txt
app/hello/: CMakeLists.txt
greet/: CMakeLists.txt  greet.cpp  main.cpp
greet_jlcxx/: CMakeLists.txt  greet.cpp
julia_bindings/: CMakeLists.txt
julia_bindings/Greet.jl/: Project.toml
julia_bindings/Greet.jl/src/: Greet.jl
julia_bindings/src/: CMakeLists.txt
src/: CMakeLists.txt  greet.cpp  greet.hpp
